--- a/schedule/yast/allmodules+allpatterns+registration/allmodules+allpatterns+registration@s390x.yaml
+++ b/schedule/yast/allmodules+allpatterns+registration/allmodules+allpatterns+registration@s390x.yaml
@@ -10,7 +10,7 @@ description:    >
         report any issues;
      5. Registration is performed on the installed system.
 vars:
-  SCC_REGISTER: ''
+  SCC_REGISTER: 'console'
   ENABLE_ALL_SCC_MODULES: 1
   PATTERNS:	all
   ADDONS: all-packages
