Implement valgrind tests
Implements a test run for valgrind, where a c program with leaking
memory gets compiled and used. Valgrind is then executed to detect
various kinds of memory leaks under various conditions.

We test for leaking blocks, leaking blocks in child processes,
lekaing but still reachable blocks and the following valgrind tools:
memcheck, callgrind, cachegrind, helgrind, massif.

--- a/schedule/qam/12-SP4/mau-extratests.yaml
+++ b/schedule/qam/12-SP4/mau-extratests.yaml
@@ -61,6 +61,7 @@ schedule:
 - console/libgcrypt
 - console/libqca2
 - console/gd
+- console/valgrind
 - console/coredump_collect
 conditional_schedule:
   zkvm_boot:
