--- a/schedule/qam/15/mau-extratests.yaml
+++ b/schedule/qam/15/mau-extratests.yaml
@@ -64,6 +64,7 @@ schedule:
 - console/libgcrypt
 - console/libqca2
 - console/gd
+- console/valgrind
 - console/coredump_collect
 conditional_schedule:
   zkvm_boot:
