--- a/schedule/yast/modify_existing_partition_sle.yaml
+++ b/schedule/yast/modify_existing_partition_sle.yaml
@@ -27,7 +27,7 @@ schedule:
   - installation/first_boot
   - console/validate_modify_existing_partition
 test_data:
-  !include: test_data/yast/modify_existing_partition/modify_existing_partition.yaml
+  $include: test_data/yast/modify_existing_partition/modify_existing_partition.yaml
 conditional_schedule:
   reconnect_mgmt_console:
     ARCH:
