--- a/schedule/yast/btrfs/btrfs_sle_libstorage_spvm.yaml
+++ b/schedule/yast/btrfs/btrfs_sle_libstorage_spvm.yaml
@@ -35,4 +35,4 @@ schedule:
 test_data:
   device: sda
   table_type: gpt
-  !include: test_data/yast/btrfs/btrfs_sle_libstorage.yaml
+  $include: test_data/yast/btrfs/btrfs_sle_libstorage.yaml
