--- a/schedule/yast/ext4/ext4@yast-xen-pv.yaml
+++ b/schedule/yast/ext4/ext4@yast-xen-pv.yaml
@@ -31,4 +31,4 @@ schedule:
 test_data:
   device: /dev/xvdb
   table_type: gpt
-  !include: test_data/yast/ext4/ext4.yaml
+  $include: test_data/yast/ext4/ext4.yaml
