--- a/schedule/yast/lvm_raid1/lvm+raid1_opensuse.yaml
+++ b/schedule/yast/lvm_raid1/lvm+raid1_opensuse.yaml
@@ -7,7 +7,7 @@
     RAIDLEVEL: 1
     LVM: 1
   test_data:
-    !include: test_data/yast/lvm_raid1/lvm+raid1_opensuse.yaml
+    $include: test_data/yast/lvm_raid1/lvm+raid1_opensuse.yaml
   schedule :
     - installation/isosize
     - installation/bootloader_start
