--- a/schedule/yast/remote_vnc_target_opensuse.yaml
+++ b/schedule/yast/remote_vnc_target_opensuse.yaml
@@ -1,8 +1,8 @@
 ---
-name:           remote_vnc_target
-description:    >
-  Boot with vnc=1 parameter and wait for parallel job (remote_vnc_controller) 
-  to install the system.
+name: remote_vnc_target
+description: >
+  Boot with vnc=1 parameter and wait for parallel job (remote_vnc_controller)  to
+  install the system.
 schedule:
   - installation/isosize
   - installation/bootloader
