--- a/schedule/yast/allmodules+allpatterns+registration/allmodules+allpatterns+registration@uefi.yaml
+++ b/schedule/yast/allmodules+allpatterns+registration/allmodules+allpatterns+registration@uefi.yaml
@@ -1,24 +1,24 @@
 ---
-name:           allmodules+allpatterns+registration@uefi
-description:    >
+name: allmodules+allpatterns+registration@uefi
+description: >
   Full Medium installation that covers the following cases:
-     1. Additional modules enabled using SCC (Legacy, Development Tools, Web and
-        Scripting, Containers, Desktop Applications);
+     1. Additional modules enabled using SCC (Legacy, Development Tools,
+        Web and Scripting, Containers, Desktop Applications);
      2. All patterns installed;
      3. System registration is skipped during installation;
      4. Installation is validated by successful boot and that YaST does not
         report any issues;
      5. Registration is performed on the installed system.
 vars:
-  SCC_REGISTER: 'console'
+  SCC_REGISTER: console
   ENABLE_ALL_SCC_MODULES: 1
-  PATTERNS:	all
+  PATTERNS: all
   ADDONS: all-packages
 schedule:
   - installation/bootloader_start
   - installation/welcome
   - installation/accept_license
-  - installation/scc_registration  
+  - installation/scc_registration
   - installation/addon_products_sle
   - installation/system_role
   - installation/partitioning
