--- a/schedule/yast/encryption/cryptlvm+activate_existing_spvm.yaml
+++ b/schedule/yast/encryption/cryptlvm+activate_existing_spvm.yaml
@@ -1,14 +1,14 @@
 ---
 description: >
   Conduct installation trying to reuse encrypted partitions (bsc#993247). Using
-  pre-partitioned disk image to validate encrypted partitions activation.
-  For spvm we have to disable plymouth, so edit_optional_kernel_cmd_parameters
-  module is scheduled and OPT_KERNEL_PARAMS variable is set.
+  pre-partitioned disk image to validate encrypted partitions activation. For
+  spvm we have to disable plymouth, so edit_optional_kernel_cmd_parameters module
+  is scheduled and OPT_KERNEL_PARAMS variable is set.
 name: cryptlvm+activate_existing
 vars:
-    OPT_KERNEL_PARAMS: console=%SERIALDEV% VNCSize=1024x768
-    DESKTOP: textmode
-    ENCRYPT_ACTIVATE_EXISTING: 1
+  OPT_KERNEL_PARAMS: console=%SERIALDEV% VNCSize=1024x768
+  DESKTOP: textmode
+  ENCRYPT_ACTIVATE_EXISTING: 1
 schedule:
   - installation/bootloader_start
   - installation/welcome
