--- a/schedule/yast/encryption/cryptlvm+cancel_existing.yaml
+++ b/schedule/yast/encryption/cryptlvm+cancel_existing.yaml
@@ -1,14 +1,13 @@
 ---
 description: >
-  Conduct installation cancelling encrypted partitions activation, and
-  creating encrypted lvm setup from scratch.
-  Using pre-partitioned disk image to validate encrypted
-  partitions activation and that we can re-ecnrypt the disk.
+  Conduct installation cancelling encrypted partitions activation, and creating
+  encrypted lvm setup from scratch. Using pre-partitioned disk image to validate
+  encrypted partitions activation and that we can re-ecnrypt the disk.
 name: cryptlvm+activate_existing
 vars:
-    ENCRYPT: 1
-    ENCRYPT_CANCEL_EXISTING: 1
-    LVM: 1
+  ENCRYPT: 1
+  ENCRYPT_CANCEL_EXISTING: 1
+  LVM: 1
 schedule:
   - installation/bootloader_start
   - installation/welcome
