--- a/schedule/yast/encryption/cryptlvm_sle_12_spvm.yaml
+++ b/schedule/yast/encryption/cryptlvm_sle_12_spvm.yaml
@@ -1,14 +1,14 @@
 ---
 description: >
-  Conduct installation with encrypted LVM selected during installation.
-  Generated disk image used in downstream jobs. (crypt-)LVM installations can
-  take longer, especially on non-x86_64 architectures.
-  For spvm we have to disable plymouth, so edit_optional_kernel_cmd_parameters
-  module is scheduled and OPT_KERNEL_PARAMS variable is set.
+  Conduct installation with encrypted LVM selected during installation. Generated
+  disk image used in downstream jobs. (crypt-)LVM installations can take longer,
+  especially on non-x86_64 architectures. For spvm we have to disable plymouth,
+  so edit_optional_kernel_cmd_parameters module is scheduled and OPT_KERNEL_PARAMS
+  variable is set.
 name: cryptlvm
 vars:
-    OPT_KERNEL_PARAMS: console=%SERIALDEV% VNCSize=1024x768
-    DESKTOP: textmode
+  OPT_KERNEL_PARAMS: console=%SERIALDEV% VNCSize=1024x768
+  DESKTOP: textmode
 schedule:
   - installation/bootloader
   - installation/welcome
