--- a/schedule/yast/encryption/lvm_full_encrypt.yaml
+++ b/schedule/yast/encryption/lvm_full_encrypt.yaml
@@ -1,7 +1,8 @@
-name:           lvm-encrypt-separate-boot
-description:    >
-  Same as lvm-full-encrypt, but with separate boot not encrypted partition, 
-  only installation to not repeat everything again with small risk.
+---
+name: lvm-encrypt-separate-boot
+description: >
+  Same as lvm-full-encrypt, but with separate boot not encrypted partition, only
+  installation to not repeat everything again with small risk.
 vars:
   ENCRYPT: 1
   FULL_LVM_ENCRYPT: 1
