--- a/schedule/yast/raid/raid5_sle_msdos.yaml
+++ b/schedule/yast/raid/raid5_sle_msdos.yaml
@@ -1,5 +1,6 @@
-name:           RAID5_msdos
-description:    >
+---
+name: RAID5_msdos
+description: >
   Configure RAID 5 on the disks with GPT partition tables using Expert Partitioner.
   Creates boot, root and swap partitions on each of the 4 disks and then uses
   them for RAID 5.
@@ -83,29 +84,29 @@ test_data:
       chunk_size: 64
       device_selection_step: 3
       partition:
-          role: operating-system
-          formatting_options:
-            should_format: 1
-          mounting_options:
-            should_mount: 1
+        role: operating-system
+        formatting_options:
+          should_format: 1
+        mounting_options:
+          should_mount: 1
     - raid_level: 1
       chunk_size: 64
       device_selection_step: 2
       partition:
-          role: data
-          formatting_options:
-            should_format: 1
-            filesystem: ext4
-          mounting_options:
-            should_mount: 1
-            mount_point: '/boot'
+        role: data
+        formatting_options:
+          should_format: 1
+          filesystem: ext4
+        mounting_options:
+          should_mount: 1
+          mount_point: /boot
     - raid_level: 0
       chunk_size: 64
       device_selection_step: 1
       partition:
-          role: swap
-          formatting_options:
-            should_format: 1
-            filesystem: swap
-          mounting_options:
-            should_mount: 1
+        role: swap
+        formatting_options:
+          should_format: 1
+          filesystem: swap
+        mounting_options:
+          should_mount: 1
