--- a/schedule/yast/remote_ssh_target.yaml
+++ b/schedule/yast/remote_ssh_target.yaml
@@ -1,8 +1,8 @@
 ---
-name:           remote_ssh_target
-description:    >
-  Boot with ssh=1 parameter and wait for parallel job (remote_ssh_controller) 
-  to install the system.
+name: remote_ssh_target
+description: >
+  Boot with ssh=1 parameter and wait for parallel job (remote_ssh_controller)  to
+  install the system.
 schedule:
   - installation/isosize
   - installation/bootloader
